# KerrTraceCpp

./: .gitignore  CMakeLists.txt  PORTING_PLAN.md  README.md  README_BUILD.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
include/kerrtrace/: animation.hpp  config.hpp  geometry.hpp  image_io.hpp  palette.hpp  raytracer.hpp
scripts/: benchmark_python_vs_cpp.sh  download_libtorch.ps1  download_libtorch.sh  generate_parity_reference.sh  generate_regression_fixtures.sh  profile_tiles.sh  run_kerrtrace.sh  run_regression_suite.py
src/: animation.cpp  config.cpp  geometry.cpp  image_io.cpp  main.cpp  palette.cpp  raytracer.cpp
tests/fixtures/: config_python_style_sample.json  config_regression_advanced.json  config_regression_baseline.json
